<resources>
    <string name="app_name">TodayNews</string>
    <string name="today_news">Today News</string>
    <string name="get_daily_news_updates">Get Daily News Updates</string>
    <string name="enter_you_username">Enter you username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="SignIn">
        <u>SignIn</u>
    </string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="report_fragment">Report Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="news_fragment">News Fragment</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="your_feedback_will_be_used_to_improve_this_app">Your feedback will be used to improve this app</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="share_your_ideas_to_improve_this_app">Share your ideas to improve this app</string>
    <string name="submit">Submit</string>
    <string name="good">Good</string>
    <string name="poor">Poor</string>
    <string name="share_your_app_experience">Share your app experience</string>
    <string name="excellent">Excellent</string>
    <string name="feedback">Feedback</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_email">User Email</string>
    <string name="user_name">User Name</string>
    <string name="user_profile">User Profile</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
</resources>