<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FeedbackFragment"
    android:orientation="vertical">

    <!--    main heading-->
    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_form"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        />

    <!--    sub heading-->
    <TextView
        android:id="@+id/subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_feedback_will_be_used_to_improve_this_app"
        android:textStyle="normal"
        android:textSize="12sp"
        android:layout_gravity="center"
        />

    <!--    name-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    location-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_location" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    experience-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_your_app_experience" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    improvements-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/improve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_your_ideas_to_improve_this_app" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    submit-->
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        />

</LinearLayout>